--- a/DiffGeoLectureSeries/main.tex
+++ b/DiffGeoLectureSeries/main.tex
@@ -187,7 +187,7 @@
     citecolor=black,
     filecolor=black,
     linkcolor=blue,
-    urlcolor=black
+    urlcolor=blacksquare
 }
 %
 %--------Solution--------
@@ -211,6 +211,8 @@
 These are notes for the spring 2019 differential geometry lecture series for the math club. The plan is for the course to give an introduction to math club members to the basics and terminology of smooth manifolds. A good reference if you want to read more is John Lee's \emph{Introduction to Smooth Manifolds}. In terms of prerequisites, it would be good to have a background in point set topology, multivariable calculus, and linear algebra.
 %
 \tableofcontents
+%
+\include{preliminaries}
 %
 \include{lecture1}
 %
