--- a/DiffGeoLectureSeries/preliminaries.tex
+++ b/DiffGeoLectureSeries/preliminaries.tex
@@ -1,13 +1,80 @@
 \setcounter{section}{-1}
 %
 \section{Preliminaries}
-%TODO Jacobians, chain rule, summation convention
-%Inverse function theorem, smoothness in Euclidean space, diffeomorphism
+%
+These are some preliminary details regarding multivariable calculus. Don't
+worry if you're not 100\% familiar with them, but we will build upon these
+concepts when we study manifolds. Since the goal of differential geometry
+is to use calculus to study nonlinear spaces via linear approximation,
+it's good to have a foundation in calculus in the standard setting.\\
+
+Recall that given a differentiable function $F: \R^n \to \R^m$, where
+$F = (F^1, \ldots, F^m)$ for functions $F^i : \R^n \to \R$, its derivative
+is given by it's \ib{Jacobian matrix} $DF$, which is the matrix
+$$DF = \begin{pmatrix}
+\frac{\partial F^1}{\partial x^1} &
+\ldots & \frac{\partial F^1}{\partial x^n} \\
+\vdots & \vdots & \vdots \\
+\frac{\partial F^m}{\partial x^1} &
+\ldots & \frac{\partial F^m}{\partial x^n}
+\end{pmatrix} $$
+We denote the Jacobian evaluated at a point $p$ to be $DF_p$. Given maps
+$$\begin{tikzcd}
+\R^k \ar[r,"F"] & \R^n \ar[r, "G"] & \R^m
+\end{tikzcd}$$
+We have that $D(G \circ F)_p = DG_{F(p)} \circ DF_p$. This is the
+\ib{multivariable chain rule}. Concisely, ``the differential of the
+composition is the composition of the differentials."
+%
 \begin{defn}
-	A map $F : U \to V$ where $U \subset \R^n$ and $V \subset \R^m$ is \ib{smooth} if all of its
-	component functions are infinitely differentiable, i.e. the partial derivatives of all orders
-	exist and are continuous.
+	A map $F : U \to V$ where $U \subset \R^n$ and $V \subset \R^m$ is
+	\ib{smooth} if all of its component functions are infinitely
+	differentiable, i.e. the partial derivatives of all ordersexist and are
+	continuous.
 \end{defn}
 %
-Note that smoothness is a local condition -- to know a function is smooth at a point, it suffices to check
-in a small neighborhood.
+Note that smoothness is a local condition -- to know a function is smooth
+at a point, it suffices to check in a small neighborhood. A function is
+smooth if and only if it is smooth at every point.
+%
+\begin{defn}
+	Let $U \subset \R^n$ and $V \subset \R^m$ be open subsets. A map
+	$F : U \to V$ is called a \ib{diffeomorphism} if $F$ is smooth,
+	bijective, and admits a smooth inverse $F\inv : V \to U$.
+\end{defn}
+%
+Note that a smooth bijection is not sufficient for a map to be a
+diffeomorphism. The map $f : \R \to \R$ given by $f(x) = x^3$ is a smooth
+bijection, but it's inverse $x \mapsto x^{1/3}$ is not smooth at $0$, so
+$f$ is not a diffeomorphism. Since smoothness is a local property, we
+also have the notion of a local diffeomorphism.
+%
+\begin{defn}
+	Let $U \subset \R^n$ and $V \subset \R^m$. A smooth function
+	$F : U \to V$ is a \ib{local diffeomorphism} if for every $p \in U$,
+	there exists an open neighborhood $U_p \subset U$ such that
+	$F\vert_{U_p}$ is a diffeomorphism onto its image.
+\end{defn}
+%
+It is clear that every diffeomorphism is a local diffeomorphism, but
+the converse is not true, since local diffeomorphisms can fail to be
+bijective. An example of such a map is the polar transformation
+$p : \R^2-\set{0} \to \R^2-\set{0}$ given by
+$p(r,\theta) = (r\cos\theta,r\sin\theta)$. An important theorem tells us
+that the Jacobian matrix captures all the local information we need.
+%
+\begin{thm}[\ib{The Inverse Function Theorem}]
+	Let $F : U \to V$ be smooth. Then if $DF_p$ is an isomorphism, $F$ is a
+	local diffeomorphism at $p$.
+\end{thm}
+%
+Finally, there's a widespread convention in differential geometry
+regarding summations, called the \ib{Einstein summation convention}. We
+can compactly represent the summation $\sum_i v^ie_i$ as just $v^ie_i$.
+The rule is that if you see an upper index and a lower index, there is
+an implicit summation. For example, matrix multiplication in this
+notation is given by $(AB)^i_j = A^i_kB^k_j$. Where the upper index denotes
+the row, and the lower index denotes the column, and the implicit
+summation is over the dummy index $k$. This convention becomes
+useful when there are a lot of indices floating around, which is
+a common occurence in differential geometry.
