--- a/DiffGeoLectureSeries/lecture1.tex
+++ b/DiffGeoLectureSeries/lecture1.tex
@@ -297,7 +297,7 @@ namely they are isomorphisms to $U \times \R^n$, so $TM$ locally looks
 like a product manifold, but globally there may be some twisting. In
 addition, each fiber $\pi\inv(p)$ has the structure of a real vector
 space. These are defining features of a geometric object called a
-\ib{vector bundle}, which are a central object in differential geometry.
+\ib{vector bundle}, which are central objects in differential geometry.
 %
 \section{A Short Introduction to Vector Bundles}
 %
@@ -350,7 +350,7 @@ $\pi\inv(p)$ as $E_p$ where the map $\pi$ is implicit.
 %
 \begin{defn}
 Let $E \to M$ be a vector bundle. Then a \ib{local section} of $E$ is
-a right inverse $\sigma U \to E$ for some open subset $U \subset M$, i.e.
+a right inverse $\sigma:U \to E$ for some open subset $U \subset M$, i.e.
 $\pi \circ \sigma = \id_U$. In the case that $U = M$, we call $\sigma$ a
 \ib{global section}.
 \end{defn}
@@ -362,9 +362,9 @@ geometry can be expressed in terms of vector bundles and their sections,
 especially when it comes to vector and tensor fields on manifolds.
 %
 \begin{exer}
-	Prove that $TS^2$ is not isomorphic to a trivial bundle, i.e. there
-	exists no diffeomorphism $TS^2 \to S^2 \times \R^2$ such that the
-	diagram
+	Prove that the tangent bundle $TS^2$ is not isomorphic to a trivial
+	bundle, i.e. there exists no diffeomorphism $TS^2 \to S^2 \times \R^2$
+	such that the diagram
 	$$\begin{tikzcd}
 	TS^2 \ar[dr]\ar[rr] && S^2 \times \R^2 \ar[dl]\\
 	& S^2
