--- a/DiffGeoLectureSeries/main.tex
+++ b/DiffGeoLectureSeries/main.tex
@@ -216,4 +216,6 @@ These are notes for the spring 2019 differential geometry lecture series for the
 %
 \include{lecture1}
 %
+\include{lecture2}
+%
 \end{document}
