--- a/DiffGeoLectureSeries/preliminaries.tex
+++ b/DiffGeoLectureSeries/preliminaries.tex
@@ -65,8 +65,8 @@ $p(r,\theta) = (r\cos\theta,r\sin\theta)$. An important theorem tells us
 that the Jacobian matrix captures all the local information we need.
 %
 \begin{thm}[\ib{The Inverse Function Theorem}]
-	Let $F : U \to V$ be smooth. Then if $DF_p$ is an isomorphism, $F$ is a
-	local diffeomorphism at $p$.
+	Let $F : U \to V$ be smooth. Then $F$ is a local diffeomorphism at $p$ if
+	and only if $dF_p$ is an isomorphism.
 \end{thm}
 %
 Finally, there's a widespread convention in differential geometry
